--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-svg": "^15.0.0",
+    "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   },
